--- a/main.css
+++ b/main.css
@@ -141,7 +141,48 @@ nav
 .active, .dot:hover {
   background-color: #717171;
 }
-
+.scrolldown
+{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    width: 40px;
+    height: 50px;
+    z-index: 1000;
+    transform: translateY(-80px) translateX(-50%)
+    
+}
+.scrolldown span{
+    position: absolute;
+    
+    display: block;
+    width: 30px;
+    height: 30px;
+    border-bottom: 5px solid rgb(255, 247, 247);
+    border-right: 5px solid rgb(255, 247, 247);
+    transform: rotate(45deg);
+    margin: -10px;
+    animation: scroll 2s infinite;
+}
+.scrolldown span:nth-child(2){
+    animation-delay: -.2s;
+}
+.scrolldown span:nth-child(3){
+    animation-delay: -.4s;
+}
+@keyframes scroll{
+    0%{
+        opacity: 0;
+        transform: rotate(45deg) translate(-20px,-20px);
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        transform: rotate(45deg) translate(20px, 20px);
+    }
+}
 /*--Home--*/
 section
   {
@@ -229,7 +270,7 @@ nav .fas{
 
 .column .left
   {
-      width: 45%;
+    width: 45%;
   }
 
   .column .left img
@@ -242,7 +283,7 @@ nav .fas{
   }
 
 /*--side bar--*/
-@media(max-width: 700px){
+@media(max-width: 500px){
   .box h1{
     font-size: 20px;
   }
@@ -255,7 +296,7 @@ nav .fas{
       height: 100vh;
       width: -200px;
       top: 0;
-      right: 200px;
+      right: 500px;
       text-align: left;
       z-index: 2;
       transition: 1s;
@@ -263,7 +304,7 @@ nav .fas{
     nav .fas {
       display: block;
       color: rgb(0, 0, 0);
-      margin: 10p;
+      margin: 10px;
       font-size: 22px;
       cursor: pointer;
     }
@@ -356,7 +397,7 @@ transition: all ease 0.5s;
 
 }
 @media(max-width: 700px){
-  .b-container{
+  .Card-Container{
     flex-direction: column;
   }
 }
