--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 {
   height: 10vh;
   width: 100%;
-  padding: 0 8px;
+  padding: 0 4px;
   position: relative;
 
 }
@@ -22,7 +22,6 @@ nav
   align-items: center;
   padding: 3% 4%;
   justify-content: space-between;
-  z-index:999 ;
 
 }
 .nav img
@@ -39,7 +38,7 @@ nav
 {
   list-style: none;
   display: inline-block;
-  padding: 2px 8px;
+  padding: 2px 4px;
   position: relative;
 
 }
@@ -48,8 +47,8 @@ nav
   color: rgb(0, 1, 1);
   text-decoration: none;
   font-size: 16px;
-  padding: 5px 0;
-    position: relative;
+ 
+  position: relative;
 }
 .nav-links li a::after
 {
@@ -112,9 +111,10 @@ nav
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 8px;
+  bottom: 80px;
   width: 100%;
   text-align: center;
+  background-color: rgba(1, 0, 0, 0.377);
 }
 
 /* Number text (1/3 etc) */
@@ -144,17 +144,16 @@ nav
 .scrolldown
 {
     position: absolute;
-    bottom: 20px;
-    left: 50%;
+    bottom: 10px;
+    left: 51%;
     width: 40px;
-    height: 50px;
+    height: 28px;
     z-index: 1000;
     transform: translateY(-80px) translateX(-50%)
     
 }
 .scrolldown span{
     position: absolute;
-    
     display: block;
     width: 30px;
     height: 30px;
@@ -183,72 +182,42 @@ nav
         transform: rotate(45deg) translate(20px, 20px);
     }
 }
+
 /*--Home--*/
-section
+.Home
   {
-      background-color:#fff;
-      padding: 100px;
+      width: 70%;
+      margin: auto;
+      padding-top: 80px;
+      padding-bottom: 50px;
   }
-  .about .title
+  .Home-content
   {
-      text-align: center;
-      font-size: 24px;
-      margin-top: 0px;
-      margin-bottom: 60px;
-      padding-bottom: 5px;
-      font-weight: 500;
+    flex-basis: 48%;
+    padding: 30px 2px;
+    
+  }
+  .pic-content img{
+    width: 70%;
 
   }
-  .about .about-content 
+  .Home-content h2
   {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-between;
+    padding-top: 0;
   }
-  .about .about-content .left 
+  .Home-content p
   {
-      width: 45%;
+    padding: 15px 0 50px;
   }
-  .about .about-content .left img
-  {
-      height: 400px;
-      width: 400px;
-      object-fit: cover;
-      border-radius: 6px;
-  }
-  .about .about-content .right
-  {
-      width: 55%;
-  }
-  .about .about-content .right2
-  {
-      width: 55%;
-  }
-  /*--Intro--*/
-  .Introduction{
-    width: 100%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px;
-  }
-  .row
-  {
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .Introduction-col{
-    flex-basis: 100%;
-    background-color: rgb(226, 211, 149);
-    border-radius: 10px;
-    margin-bottom: 5%;
-    padding: 20px 12px;
-    box-sizing: border-box;
+  @media(max-width: 700px){
+    .Home-content{
+      flex-direction: column;
+    }
   }
 
 
-/*--about--*/
+
+/*--home about--*/
 .box
 {
   width: 90%;
@@ -262,10 +231,6 @@ section
 .box h1
 {
   font-size: 40px;
-}
-nav .fas{
-  display: none;
-
 }
 
 .column .left
@@ -281,37 +246,103 @@ nav .fas{
     border-radius: 6px;
 
   }
+.row
+{
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
 
-/*--side bar--*/
-@media(max-width: 500px){
-  .box h1{
-    font-size: 20px;
+/*--about--*/
+
+.section-1 {
+  padding: 20px 200px;
+}
+
+.section-1 .row .col-md-6 .pray img {
+  opacity: 0.8;
+  width: 80%;
+  border-radius: 10px;
+}
+
+.section-1 .row .col-md-6:last-child {
+  position: relative;
+}
+
+.section-1 .row .col-md-6 .panel {
+  position: absolute;
+  top: 69px;
+  left: -700px;
+  background: white;
+  border-radius: 3px;
+  text-align: left;
+  padding: 13vmin 5vmin 20vmin 10vmin;
+  box-shadow: 0px 25px 42px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.section-1 .row .col-md-6 .panel h1 {
+  font-weight: bold;
+  padding: 4px 0;
+  font-size: 24px;
+}
+
+.section-1 .row .col-md-6 .panel p {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.781);
+}
+@media(max-width: 768px){
+  .section-1 .row .col-md-6 .panel {
+    position: initial;
+    width: initial;
+    height: initial;
   }
-    .nav-links ul li{
-      display: block;
-    }
-    .nav-links{
-      position: absolute;
-      background: rgb(209, 179, 215);
-      height: 100vh;
-      width: -200px;
-      top: 0;
-      right: 500px;
-      text-align: left;
-      z-index: 2;
-      transition: 1s;
-    }
-    nav .fas {
-      display: block;
-      color: rgb(0, 0, 0);
-      margin: 10px;
-      font-size: 22px;
-      cursor: pointer;
-    }
-    .nav-links ul{
-      padding: 30px;
+  
+}
+.box
+{
+  width: 90%;
+  color: rgb(11, 0, 0);
+  position: absolute;
+  top: 26%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.box h1
+{
+  font-size: 40px;
+}
 
-    }
+.column .left
+  {
+    width: 45%;
+  }
+
+  .column .left img
+  {
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+  }
+  .detail{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+  }
+  .detail h1{
+    font-size: 24px;
+    padding-top: 10px;
+  }
+  .detail h2{
+    padding-top: 10px;
+  }
+  .pic-content
+  {
+    padding-top: 40px;
   }
 
 
@@ -396,7 +427,7 @@ transform:translateY(-10px);
 transition: all ease 0.5s;
 
 }
-@media(max-width: 700px){
+@media(max-width: 1000px){
   .Card-Container{
     flex-direction: column;
   }
@@ -418,7 +449,7 @@ transition: all ease 0.5s;
 {
     width: 80%;
     margin: auto;
-    padding: 50px 50px;
+    padding: 50px 100px;
 }
 .contact-col
 {
@@ -435,10 +466,10 @@ transition: all ease 0.5s;
 }
 .contact-col div .far
 {
-    font-size: 28px;
-    color: rgb(0, 0, 1);
-    margin: 14px;
-    margin-right: 30px;
+  font-size: 28px;
+  color: rgb(3, 0, 6);
+  margin: 14px;
+  margin-right: 30px;
 }
 .contact-col div .fab
 {
@@ -454,6 +485,11 @@ transition: all ease 0.5s;
     margin-bottom: 5px;
     color: rgb(2, 0, 2);
     font-weight: 400;
+}
+@media(max-width: 700px){
+  .contact-col{
+    flex-direction: column;
+  }
 }
 
 /*--footer--*/
@@ -490,7 +526,7 @@ transition: all ease 0.5s;
 
   color: #fff;
   text-decoration: none;
-  margin-bottom: 0.5rem;
+  margin-bottom: 8px;
 
 }
 .footer-heading a:hover
@@ -499,3 +535,5 @@ transition: all ease 0.5s;
   transition: 0.3s ease-out;
 
 }
+
+
