--- a/main.css
+++ b/main.css
@@ -24,9 +24,10 @@ nav
   justify-content: space-between;
 
 }
-.nav img
+.nav .a
 {
   width: 150%;
+  text-decoration: none;
 
 }
 .nav-links
@@ -46,8 +47,7 @@ nav
 {
   color: rgb(0, 1, 1);
   text-decoration: none;
-  font-size: 16px;
- 
+  font-size: 16px; 
   position: relative;
 }
 .nav-links li a::after
@@ -141,6 +141,7 @@ nav
 .active, .dot:hover {
   background-color: #717171;
 }
+/*--Arrows on slide bar--*/
 .scrolldown
 {
     position: absolute;
@@ -157,8 +158,8 @@ nav
     display: block;
     width: 30px;
     height: 30px;
-    border-bottom: 5px solid rgb(255, 247, 247);
-    border-right: 5px solid rgb(255, 247, 247);
+    border-bottom: 5px solid rgb(0, 0, 0);
+    border-right: 5px solid rgb(0, 0, 0);
     transform: rotate(45deg);
     margin: -10px;
     animation: scroll 2s infinite;
@@ -535,5 +536,31 @@ transition: all ease 0.5s;
   transition: 0.3s ease-out;
 
 }
+.h-row{
+  position: relative;
+  width: 100%;
+  display: flex;
+  
+  left: 100px;
+}
+.h-row .Home-row{
+  position: relative;
+  width: 48%;
+  top: 90px;
+  left: 100px;
+}
 
+.h-row .Home-row .img{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.h-row .Home-row .img{
+  position: relative;
+  top: 0px;
+  left: 20px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
