--- a/main.css
+++ b/main.css
@@ -226,6 +226,7 @@ nav
   @media(max-width: 700px){
     .Home-content{
       flex-direction: column;
+      width: 100%;
     }
   }
 
@@ -287,7 +288,7 @@ nav
 .section-1 .row .col-md-6 .panel {
   position: absolute;
   top: 69px;
-  left: -700px;
+  left: -900px;
   background: white;
   border-radius: 3px;
   text-align: left;
@@ -441,8 +442,11 @@ transform:translateY(-10px);
 transition: all ease 0.5s;
 
 }
-@media(max-width: 1000px){
-  #mini-Projects{
+@media screen and (max-width: 995px) {
+  .Card-Container{
+    flex-direction: column;
+  }
+  .box-text{
     flex-direction: column;
   }
 }
@@ -549,6 +553,37 @@ transition: all ease 0.5s;
   transition: 0.3s ease-out;
 
 }
+.row{
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.info-row{
+  position: relative;
+  width: 48%;
+  left: 14%;
+  margin-top: 34px;
+}
+.row .info-row .box-img{
+   position: relative;
+   width: 100%;
+   height: 100%;
+}
+.row .info-row .box-img img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+@media(max-width: 992px){
+  .row{
+    flex-direction: column;
+    width: 50%;
+  }
+
+}
+
 .h-row{
   position: relative;
   width: 100%;
