--- a/main.css
+++ b/main.css
@@ -565,6 +565,15 @@ transition: all ease 0.5s;
   left: 14%;
   margin-top: 34px;
 }
+.row h2{
+
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center 
+  
+}
+
 .row .info-row .box-img{
    position: relative;
    width: 100%;
@@ -579,7 +588,7 @@ transition: all ease 0.5s;
 @media(max-width: 992px){
   .row{
     flex-direction: column;
-    width: 50%;
+    width: 100%;
   }
 
 }
