--- a/main.css
+++ b/main.css
@@ -5,13 +5,13 @@
   box-sizing: border-box;
 
 }
+
 .header
 {
   height: 10vh;
   width: 100%;
   padding: 0 4px;
   position: relative;
-
 }
 
 nav
@@ -22,12 +22,14 @@ nav
   align-items: center;
   padding: 3% 4%;
   justify-content: space-between;
-
 }
-#header{
+
+#header
+{
   overflow: hidden;
   background-color: #333;
 }
+
 .nav a
 {
   width: 150%;
@@ -38,24 +40,22 @@ nav
   text-align: center;
   padding: 14px;
   text-decoration: none;
-  
-
 }
+
 .nav-links
 {
   flex: 1;
   text-align: right;
-  
 }
+
 .nav-links ul li
 {
   list-style: none;
   display: inline-block;
   padding: 2px 4px;
   position: relative;
-  
-
 }
+
 .nav-links ul li a
 {
   color: rgb(0, 1, 1);
@@ -63,6 +63,7 @@ nav
   font-size: 16px; 
   position: relative;
 }
+
 .nav-links li a::after
 {
     content: '';
@@ -74,25 +75,29 @@ nav
     left: 0;
     transition: width 0.6s;
 }
+
 .nav-links li a:hover::after
 {
     width: 100%;
 }
 
 /* Slideshow container */
-.slideshow-container {
+.slideshow-container 
+{
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
 /* Hide the images by default */
-.mySlides {
+.mySlides 
+{
   display: none;
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev, .next
+ {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -108,13 +113,15 @@ nav
 }
 
 /* Position the "next button" to the right */
-.next {
+.next 
+{
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+.prev:hover, .next:hover 
+{
   background-color: rgba(0,0,0,0.8);
 }
 
@@ -124,14 +131,15 @@ nav
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 80px;
+  bottom: 10px;
   width: 100%;
   text-align: center;
   background-color: rgba(1, 0, 0, 0.377);
 }
 
 /* Number text (1/3 etc) */
-.numbertext {
+.numbertext 
+{
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
@@ -140,7 +148,8 @@ nav
 }
 
 /* The dots/bullets/indicators */
-.dot {
+.dot 
+{
   cursor: pointer;
   height: 15px;
   width: 15px;
@@ -151,7 +160,8 @@ nav
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active, .dot:hover 
+{
   background-color: #717171;
 }
 /*--Arrows on slide bar--*/
@@ -166,7 +176,8 @@ nav
     transform: translateY(-80px) translateX(-50%)
     
 }
-.scrolldown span{
+.scrolldown span
+{
     position: absolute;
     display: block;
     width: 30px;
@@ -177,13 +188,16 @@ nav
     margin: -10px;
     animation: scroll 2s infinite;
 }
-.scrolldown span:nth-child(2){
+.scrolldown span:nth-child(2)
+{
     animation-delay: -.2s;
 }
-.scrolldown span:nth-child(3){
+.scrolldown span:nth-child(3)
+{
     animation-delay: -.4s;
 }
-@keyframes scroll{
+@keyframes scroll
+{
     0%{
         opacity: 0;
         transform: rotate(45deg) translate(-20px,-20px);
@@ -230,37 +244,7 @@ nav
     }
   }
 
-
-
 /*--home about--*/
-.box
-{
-  width: 90%;
-  color: rgb(11, 0, 0);
-  position: absolute;
-  top: 26%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-.box h1
-{
-  font-size: 40px;
-}
-
-.column .left
-  {
-    width: 45%;
-  }
-
-  .column .left img
-  {
-    height: 400px;
-    width: 400px;
-    object-fit: cover;
-    border-radius: 6px;
-
-  }
 .row
 {
   position: relative;
@@ -268,24 +252,66 @@ nav
   display: flex;
   justify-content: space-between;
 }
+.info-row
+{
+  position: relative;
+  width: 48%;
+  left: 14%;
+  margin-top: 34px;
+}
+.row h2
+{
 
-/*--about--*/
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center 
+  
+}
 
-.section-1 {
+.row .info-row .box-img
+{
+   position: relative;
+   width: 100%;
+   height: 100%;
+}
+.row .info-row .box-img img
+{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+@media(max-width: 999px)
+{
+  .row{
+    flex-direction: column;
+    width: 100%;
+  }
+
+}
+
+/*--about page--*/
+
+.section-1 
+{
   padding: 20px 200px;
 }
 
-.section-1 .row .col-md-6 .pray img {
+.section-1 .row .col-md-6 .pray img
+ {
   opacity: 0.8;
   width: 80%;
   border-radius: 10px;
 }
 
-.section-1 .row .col-md-6:last-child {
+.section-1 .row .col-md-6:last-child 
+{
   position: relative;
 }
 
-.section-1 .row .col-md-6 .panel {
+.section-1 .row .col-md-6 .panel 
+{
   position: absolute;
   top: 69px;
   left: -900px;
@@ -297,18 +323,21 @@ nav
   z-index: 1;
 }
 
-.section-1 .row .col-md-6 .panel h1 {
+.section-1 .row .col-md-6 .panel h1 
+{
   font-weight: bold;
   padding: 4px 0;
   font-size: 24px;
 }
 
-.section-1 .row .col-md-6 .panel p {
+.section-1 .row .col-md-6 .panel p 
+{
   font-size: 14px;
   color: rgba(0, 0, 0, 0.781);
 }
 @media(max-width: 700px){
-  .section-1 .row .col-md-6:last-child{
+  .section-1 .row .col-md-6:last-child
+  {
     position: initial;
     width: initial;
     height: initial;
@@ -361,9 +390,11 @@ nav
   }
 
 
+
 /*--projects--*/
 
-#mini-Projects{
+#mini-Projects
+{
   width:100%;
   height:100vh;
   box-sizing: border-box;
@@ -372,13 +403,16 @@ nav
   align-items: center;
   justify-content: center;
   padding-top: 40px ;
-
 }
-.header2{
+
+.header2
+{
 text-align: center;
 margin: 20px 0px;
 }
-.boxs{
+
+.boxs
+{
 background-color:#000000;
 width: 350px;
 height: 500px;
@@ -388,22 +422,28 @@ overflow: hidden;
 box-shadow: 2px 2px 12px rgba(0,0,0,0.1);
 position: relative;
 }
-.Card-Container{
+
+.Card-Container
+{
 display: flex;
 justify-content: center;
 align-content: center;
 }
-.box-img{
+
+.box-img
+{
 width: 100%;
 height: 70%;
-
 }
-.box-img img{
+
+.box-img img
+{
 width:100%;
 height: 100%;
-
 }
-.box-text{
+
+.box-text
+{
 width: 100%;
 height: 30%;
 background-color:#000000;
@@ -412,7 +452,9 @@ justify-content: center;
 align-items: center;
 text-align: center;
 }
-.box-text a{
+
+.box-text a
+{
 margin: 0px;
 color:#fff;
 font-size: 18px;
@@ -421,23 +463,27 @@ overflow: hidden;
 text-overflow: ellipsis;
 text-decoration: none; 
 }
-.box-text a:hover{
+
+.box-text a:hover
+{
 color:rgba(255,255,255,0.50)
 }
-.name{
 
+.name
+{
 color: #fff;;
 background-color:#000000;
 padding: 10px 15px;
 position: absolute;
-top: 0px;
 left: 50%;
 transform: translateX(-50%);
 font-size: 18px;
 border-radius: 0px 0px 10px 10px;
 box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
 }
-.boxs:hover{
+
+.boxs:hover
+{
 transform:translateY(-10px);
 transition: all ease 0.5s;
 
@@ -458,6 +504,7 @@ transition: all ease 0.5s;
     margin: auto;
     padding: 8px 0px;
 }
+
 .location iframe
 {
     width: 100%;
@@ -469,6 +516,7 @@ transition: all ease 0.5s;
     margin: auto;
     padding: 50px 100px;
 }
+
 .contact-col
 {
   
@@ -476,12 +524,14 @@ transition: all ease 0.5s;
     display: flex;
     justify-content: space-between;
 }
+
 .contact-col div
 {
     display: flex;
     align-items: center;
     margin-bottom: 40px;
 }
+
 .contact-col div .far
 {
   font-size: 28px;
@@ -489,6 +539,7 @@ transition: all ease 0.5s;
   margin: 14px;
   margin-right: 30px;
 }
+
 .contact-col div .fab
 {
     font-size: 28px;
@@ -497,6 +548,7 @@ transition: all ease 0.5s;
     margin-right: 30px;
   
 }
+
 .contact-col div h5
 {
     font-size: 15px;
@@ -515,6 +567,7 @@ transition: all ease 0.5s;
 {
     padding-bottom: 64px;
 }
+
 .footer
 {
     width: 80%;
@@ -523,9 +576,9 @@ transition: all ease 0.5s;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 0 auto;
-    
+    margin: 0 auto;  
 }
+
 .footer-heading
 {
   display: flex;
@@ -534,11 +587,13 @@ transition: all ease 0.5s;
   margin-left: 34px;
     
 }
+
 .footer-heading h2
 {
   margin-top: 25px;
   margin-bottom: 32px;
 }
+
 .footer-heading a 
 {
 
@@ -547,76 +602,10 @@ transition: all ease 0.5s;
   margin-bottom: 8px;
 
 }
+
 .footer-heading a:hover
 {
   color: rgb(1, 3, 14);
   transition: 0.3s ease-out;
 
-}
-.row{
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-.info-row{
-  position: relative;
-  width: 48%;
-  left: 14%;
-  margin-top: 34px;
-}
-.row h2{
-
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center 
-  
-}
-
-.row .info-row .box-img{
-   position: relative;
-   width: 100%;
-   height: 100%;
-}
-.row .info-row .box-img img{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-@media(max-width: 992px){
-  .row{
-    flex-direction: column;
-    width: 100%;
-  }
-
-}
-
-.h-row{
-  position: relative;
-  width: 100%;
-  display: flex;
-  
-  left: 100px;
-}
-.h-row .Home-row{
-  position: relative;
-  width: 48%;
-  top: 90px;
-  left: 100px;
-}
-
-.h-row .Home-row .img{
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-.h-row .Home-row .img{
-  position: relative;
-  top: 0px;
-  left: 20px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
