--- a/main.css
+++ b/main.css
@@ -242,6 +242,7 @@ nav
       flex-direction: column;
       width: 100%;
     }
+    
   }
 
 /*--home about--*/
@@ -282,12 +283,17 @@ nav
   height: 100%;
   object-fit: cover;
 }
-@media(max-width: 999px)
+@media(max-width: 700px)
 {
   .row{
     flex-direction: column;
     width: 100%;
   }
+  .info-row
+{
+  position: center;
+  width: 65%;
+}
 
 }
 
@@ -338,9 +344,11 @@ nav
 @media(max-width: 700px){
   .section-1 .row .col-md-6 .panel 
   {
-    position: initial;
-    width: 600%;
-    flex-direction: row;
+    display: none;
+  }
+  .section-1 {
+    padding: 20px 60px;
+
   }
   
 }
