--- a/main.css
+++ b/main.css
@@ -496,15 +496,14 @@ transform:translateY(-10px);
 transition: all ease 0.5s;
 
 }
-@media (max-width: 600px) {
+@media  (max-width: 600px) 
+{
   .Card-Container{
     flex-direction: column;
-  }
-  .box-text{
-    flex-direction: column;
+    height: 100%;
+    width: 100%;
   }
 }
-
 /*-- contact--*/
 .location
 {
@@ -585,35 +584,4 @@ transition: all ease 0.5s;
     justify-content: center;
     flex-wrap: wrap;
     margin: 0 auto;  
-}
-
-.footer-heading
-{
-  display: flex;
-  flex-direction: column;
-  margin-right: 34px;
-  margin-left: 34px;
-    
-}
-
-.footer-heading h2
-{
-  margin-top: 25px;
-  margin-bottom: 32px;
-}
-
-.footer-heading a 
-{
-
-  color: #fff;
-  text-decoration: none;
-  margin-bottom: 8px;
-
-}
-
-.footer-heading a:hover
-{
-  color: rgb(1, 3, 14);
-  transition: 0.3s ease-out;
-
 }
