--- a/main.css
+++ b/main.css
@@ -299,28 +299,28 @@ nav
 
 /*--about page--*/
 
-.section-1 
+.about-section
 {
   padding: 20px 200px;
 }
 
-.section-1 .row .col-md-6 .pray img
+.about-section .row .about-col .about img
  {
   opacity: 0.8;
   width: 80%;
   border-radius: 10px;
 }
 
-.section-1 .row .col-md-6:last-child 
+.about-section .row .about-col:last-child 
 {
   position: relative;
 }
 
-.section-1 .row .col-md-6 .panel 
+.about-section .row .about-col .panel 
 {
   position: absolute;
   top: 69px;
-  left: -700px;
+  left: -600px;
   background: white;
   border-radius: 3px;
   text-align: left;
@@ -329,28 +329,39 @@ nav
   z-index: 1;
 }
 
-.section-1 .row .col-md-6 .panel h1 
+.about-section .row .about-col .panel h1 
 {
   font-weight: bold;
   padding: 4px 0;
   font-size: 24px;
 }
 
-.section-1 .row .col-md-6 .panel p 
+.about-section .row .about-col .paragraph 
 {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.781);
 }
 @media(max-width: 700px){
-  .section-1 .row .col-md-6 .panel 
+  .about-section .row .about-col .panel 
   {
+    position: initial;
+  left: -70px;
+  background: white;
+  border-radius: 3px;
+  text-align: left;
+  padding: 13vmin 5vmin 20vmin 10vmin;
+  box-shadow: 0px 25px 42px rgba(0, 0, 0, 0.2);
+  padding: 100px 30px;
+   
+  }
+  .about-section {
+    padding: 100px 30px; 
+  } 
+  .about-section .row .about-col .about img{
+    padding: 100px 30px; 
     display: none;
+   
   }
-  .section-1 {
-    padding: 20px 60px;
-
-  }
-  
 }
 .box
 {
@@ -496,14 +507,25 @@ transform:translateY(-10px);
 transition: all ease 0.5s;
 
 }
-@media  (max-width: 600px) 
-{
+@media (max-width: 500px) {
   .Card-Container{
     flex-direction: column;
     height: 100%;
     width: 100%;
+    padding: 10px 20px;
+  }
+  .box-img{
+  width:100%;
+  height: 10%;
+
+  }
+  .box-img{
+  width:100%;
+  height: 74%;
+
   }
 }
+
 /*-- contact--*/
 .location
 {
@@ -517,7 +539,7 @@ transition: all ease 0.5s;
     width: 100%;
 }
 
-.contact-us
+.contact
 {
     width: 80%;
     margin: auto;
@@ -566,7 +588,16 @@ transition: all ease 0.5s;
 @media(max-width: 700px){
   .contact-col{
     flex-direction: column;
+   
+    
   }
+  
+.contact
+{
+    width: 100%;
+    margin: auto;
+    padding: 50px 100px;
+}
 }
 
 /*--footer--*/
